<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_titulo">Aplicativo Lista VIP Curso Android</string>
    <string name="txt_hint_edit_nome">Nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_curso">Curso</string>
    <string name="txt_hint_edit_telefone">Telefone</string>
    <string name="txt_selecione_um_curso">Selecione um Curso...</string>
    <string name="btn_clear">Limpar</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_end">Finalizar</string>
</resources>
